5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1644_1055.log
== TEST (2019-04-16 09:49:17) 
-- CODE:
from math import*

v0 = float(input("velicidade inicial:"))
a = radians(float(input("angulo do vetor:")))
D = float(input("distancia entre o passaro e o porco:"))
g = 9.8

R = ((v0**2) * (sin(2*a))) / g

if(D == 20 and R == 19.9 or R == 20.1):
	

-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:49:56) 
-- CODE:
from math import*

v0 = float(input("velicidade inicial:"))
a = radians(float(input("angulo do vetor:")))
D = float(input("distancia entre o passaro e o porco:"))
g = 9.8

R = ((v0**2) * (sin(2*a))) / g

if(D == 20 and R == 19.9 or R == 20.1):
	print("kl")
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:58:56) 
-- CODE:
from math import*

v0 = float(input("velicidade inicial:"))
a = radians(float(input("angulo do vetor:")))
D = float(input("distancia entre o passaro e o porco:"))
g = 9.8

R = ((v0**2) * (sin(2*a))) / g

tolerancia = abs(D - R)

if(tolerancia == 0.1):
	print("sim".lower())
else:
	print("nao".lower)

-- OUTPUT:
<built-in method lower of str object at 0x7f99b3222688>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:59:06) 
-- CODE:
from math import*

v0 = float(input("velicidade inicial:"))
a = radians(float(input("angulo do vetor:")))
D = float(input("distancia entre o passaro e o porco:"))
g = 9.8

R = ((v0**2) * (sin(2*a))) / g

tolerancia = abs(D - R)

if(tolerancia == 0.1):
	print("sim".lower())
else:
	print("nao".lower())

-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:01:13) 
-- CODE:
from math import*

v0 = float(input("velicidade inicial:"))
a = radians(float(input("angulo do vetor:")))
D = float(input("distancia entre o passaro e o porco:"))
g = 9.8

R = ((v0**2) * (sin(2*a))) / g

tolerancia = abs(D - R)

if(tolerancia == 0.1):
	print("sim".lower())
else:
	print("nao".lower())

-- EXECUTION TIME:
0.164673
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
nao
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:02:57) 
-- CODE:
from math import*

v0 = float(input("velicidade inicial:"))
a = radians(float(input("angulo do vetor:")))
D = float(input("distancia entre o passaro e o porco:"))
g = 9.8

R = ((v0**2) * (sin(2*a))) / g

tolerancia = abs(D - R)

if(tolerancia <= 0.1):
	print("sim".lower())
else:
	print("nao".lower())

-- EXECUTION TIME:
0.160026
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
